--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   ],
   "main": "index.js",
   "files": [
-    "errors.json",
-    "index.js",
-    "LICENSE"
+    "./build"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/maxkueng/chromium-net-errors.git"
   },
   "scripts": {
-    "generate": "node tools/generate.js",
-    "prepublish": "npm run generate",
-    "pretest": "npm run generate",
-    "test": "mocha --ui bdd --reporter spec"
+    "fetch-errors": "node scripts/fetch-errors",
+    "generate-errors": "node scripts/generate-errors",
+    "prepublish": "npm-run-all -s build run-tests",
+    "test:js": "ava",
+    "run-tests": "npm-run-all lint test:js",
+    "test": "npm-run-all -s clean build:js run-tests",
+    "clean": "rimraf build",
+    "build:js": "rollup -c rollup.config.js",
+    "build": "npm-run-all -s fetch-errors generate-errors clean build:js",
+    "lint": "eslint src/*.js",
+    "lint:fix": "eslint --fix src/*.js"
   },
   "author": "Max Kueng <me@maxkueng.com> (http://maxkueng.com/)",
   "licenses": [
@@ -32,14 +37,26 @@
     }
   ],
   "devDependencies": {
-    "chai": "^2.2.0",
+    "ava": "^0.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "change-case": "^2.3.0",
     "eslint": "^4.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "got": "^2.8.1",
-    "mocha": "^2.2.4",
+    "mkdirp": "^0.5.1",
+    "npm-run-all": "^4.1.2",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.57.1",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-replace": "^2.0.0",
     "split": "^0.3.3",
     "through2": "^0.6.5"
+  },
+  "ava": {
+    "require": "babel-register"
   }
 }
