Add nyc test coverage

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fetch-errors": "node scripts/fetch-errors",
     "generate-errors": "node scripts/generate-errors",
     "prepublish": "npm-run-all -s build run-tests",
-    "test:js": "ava",
+    "test:js": "nyc ava",
     "run-tests": "npm-run-all lint test:js",
     "test": "npm-run-all -s clean build:js run-tests",
     "clean": "rimraf build",
@@ -49,6 +49,7 @@
     "got": "^8.3.0",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.2",
+    "nyc": "^11.6.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
