--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
-  - "0.10"
+  - "node"
+  - "lts/*"
+  - "6"
+  - "8"
+  - "9"
+after_success:
+  - npm run publish-coverage
