--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "chromium-net-errors",
   "version": "1.0.3",
-  "description": "Chromium network errors for Chromium-based JavaScript environments",
+  "description": "Chromium network errors for Electron and Chromium-based JavaScript environments",
   "keywords": [
     "chromium",
     "atom-shell",
     "electron",
-    "error"
+    "error",
+    "errors"
   ],
   "main": "build/index.js",
   "module": "build/index.es.js",
