--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     }
   ],
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/register": "^7.0.0",
     "ava": "^0.25.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "change-case": "^3.0.2",
     "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
@@ -59,12 +60,13 @@
     "nyc": "^11.7.3",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
-    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-replace": "^2.0.0",
     "split": "^1.0.1",
     "through2": "^2.0.3"
   },
   "ava": {
     "require": "babel-register"
-  }
+  },
+  "dependencies": {}
 }
