--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/register": "^7.0.0",
-    "ava": "^0.25.0",
+    "ava": "^1.1.0",
     "babel-eslint": "^10.0.1",
     "change-case": "^3.0.2",
-    "coveralls": "^3.0.1",
+    "coveralls": "^3.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "got": "^8.3.1",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.3",
-    "nyc": "^11.7.3",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.2",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
@@ -66,7 +66,7 @@
     "through2": "^2.0.3"
   },
   "ava": {
-    "require": "babel-register"
+    "require": "@babel/register"
   },
   "dependencies": {}
 }
