--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "node": ">=8.0.0"
   },
   "devDependencies": {
+    "@ava/babel": "^1.0.0",
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/register": "^7.8.3",
-    "ava": "^2.4.0",
+    "ava": "^3.0.0",
     "babel-eslint": "^10.0.3",
     "change-case": "^3.1.0",
     "coveralls": "^3.0.9",
@@ -60,7 +61,7 @@
     "got": "^9.6.0",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.0",
     "rimraf": "^2.7.1",
     "rollup": "^1.29.1",
     "rollup-plugin-babel": "^4.3.3",
@@ -69,7 +70,7 @@
     "through2": "^3.0.1"
   },
   "ava": {
-    "require": "@babel/register"
+    "babel": true
   },
   "dependencies": {}
 }
